--- a/index.html
+++ b/index.html
@@ -12,11 +12,21 @@
   <link
     href="https://fonts.googleapis.com/css2?family=Alice&family=Archivo:ital,wght@0,100..900;1,100..900&family=Montserrat:ital,wght@0,100..900;1,100..900&family=Poppins:wght@400;700&family=Syne:wght@400..800&display=swap"
     rel="stylesheet">
+  <link rel="stylesheet" href="styles/index.css">
   <title>Snitap patins</title>
+
 </head>
 
 <body>
-
+  <header>
+    <a href="#">
+      <img src="Assets/Icons/logo.svg" alt="logo">
+    </a>
+    <a href="#">
+      <span>1</span>
+      <img src="Assets/Icons/shopping-bag-01.svg" alt="carrinho">
+    </a>
+  </header>
 </body>
 
 </html>
