--- a/index.html
+++ b/index.html
@@ -39,6 +39,27 @@
           <span>radical</span>
         </div>
       </h1>
+      <div class="buttons">
+        <a href="#" class="button buy shadow">
+          <img src="Assets/Icons/shopping-bag-01.svg" alt="carrinho">
+          COMPRAR AGORA
+        </a>
+        <a href="#" class="button play">
+          <span class="shadow">
+            <img src="Assets/Icons/play.svg" alt="carrinho">
+          </span>
+          VEJA EM AÇÃO
+        </a>
+
+      </div>
+    </div>
+    <div>
+      <div class="content">
+        <img src="Assets/Icons/Ellipse.svg" alt="">
+        <img src="Assets/Img/patins-image.png" alt="">
+        <img src="Assets/Icons/Stars 1.svg" alt="">
+        <img src="Assets/Icons/Stars 2.svg" alt="">
+      </div>
     </div>
   </section>
 </body>
