--- a/index.html
+++ b/index.html
@@ -62,6 +62,29 @@
       </div>
     </div>
   </section>
+  <section class="banner">
+    <div class="scroller bg-gradient-animate">
+      <div class="rolling">
+        <img src="Assets/Icons/banner.svg" alt="">
+        <img src="Assets/Icons/banner.svg" alt="">
+        <img src="Assets/Icons/banner.svg" alt="">
+        <img src="Assets/Icons/banner.svg" alt="">
+        <img src="Assets/Icons/banner.svg" alt="">
+        <img src="Assets/Icons/banner.svg" alt="">
+        <img src="Assets/Icons/banner.svg" alt="">
+        <img src="Assets/Icons/banner.svg" alt="">
+        <img src="Assets/Icons/banner.svg" alt="">
+        <img src="Assets/Icons/banner.svg" alt="">
+        <img src="Assets/Icons/banner.svg" alt="">
+        <img src="Assets/Icons/banner.svg" alt="">
+        <img src="Assets/Icons/banner.svg" alt="">
+        <img src="Assets/Icons/banner.svg" alt="">
+        <img src="Assets/Icons/banner.svg" alt="">
+        <img src="Assets/Icons/banner.svg" alt="">
+        <img src="Assets/Icons/banner.svg" alt="">
+      </div>
+    </div>
+  </section>
 </body>
 
 </html>
