--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
 </head>
 
 <body>
-  <header>
+  <header class="top">
     <a href="#">
       <img src="Assets/Icons/logo.svg" alt="logo">
     </a>
@@ -83,6 +83,42 @@
         <img src="Assets/Icons/banner.svg" alt="">
         <img src="Assets/Icons/banner.svg" alt="">
       </div>
+    </div>
+  </section>
+  <section class="gallery">
+    <header>
+      <span>GALERIA DE FOTOS</span>
+      <h2>#usesnitap por ai</h2>
+    </header>
+    <div class="content">
+      <figure>
+        <img src="Assets/Img/image 01.png" alt="">
+        <figcaption>
+          <img src="Assets/Icons/perfil.svg" alt="">
+          <span>@laviniapreira</span>
+        </figcaption>
+      </figure>
+      <figure>
+        <img src="Assets/Img/image 02.png" alt="">
+        <figcaption>
+          <img src="Assets/Icons/perfil.svg" alt="">
+          <span>@laviniapreira</span>
+        </figcaption>
+      </figure>
+      <figure>
+        <img src="Assets/Img/image 03.png" alt="">
+        <figcaption>
+          <img src="Assets/Icons/perfil.svg" alt="">
+          <span>@laviniapreira</span>
+        </figcaption>
+      </figure>
+      <figure>
+        <img src="Assets/Img/image 04.png" alt="">
+        <figcaption>
+          <img src="Assets/Icons/perfil.svg" alt="">
+          <span>@laviniapreira</span>
+        </figcaption>
+      </figure>
     </div>
   </section>
 </body>
