--- a/index.html
+++ b/index.html
@@ -85,6 +85,7 @@
       </div>
     </div>
   </section>
+  
   <section class="gallery">
     <header>
       <span>GALERIA DE FOTOS</span>
@@ -98,7 +99,7 @@
           <span>@laviniapreira</span>
         </figcaption>
       </figure>
-      <figure>
+      <figure data-delay>
         <img src="Assets/Img/image 02.png" alt="">
         <figcaption>
           <img src="Assets/Icons/perfil.svg" alt="">
@@ -112,7 +113,7 @@
           <span>@laviniapreira</span>
         </figcaption>
       </figure>
-      <figure>
+      <figure data-delay>
         <img src="Assets/Img/image 04.png" alt="">
         <figcaption>
           <img src="Assets/Icons/perfil.svg" alt="">
