--- a/index.html
+++ b/index.html
@@ -122,6 +122,34 @@
       </figure>
     </div>
   </section>
+
+  <footer>
+    <div class="logo">
+      <img src="Assets/Icons/logo.svg" alt="">
+      Snitap
+    </div>
+    <nav>
+      <a href="">Sobre</a>
+      <a href="">Nossas lojas</a>
+      <a href="">Politica de privacidade</a>
+    </nav>
+
+    <div class="social-links">
+      <a href="#" title="instagram">
+        <img src="Assets/Icons/mdi_instagram.svg" alt="">
+      </a>
+      <a href="#" title="facebook">
+        <img src="Assets/Icons/ic_baseline-facebook.svg" alt="">
+      </a>
+      <a href="#" title="youtube">
+        <img src="Assets/Icons/mdi_youtube.svg" alt="">
+      </a>
+      <a href="#" title="tiktok">
+        <img src="Assets/Icons/ic_baseline-tiktok.svg" alt="">
+      </a>
+
+    </div>
+  </footer>
 </body>
 
 </html>
